--- a/app/globals.css
+++ b/app/globals.css
@@ -27,3 +27,9 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "DavidLibre";
+  src: url("/Fonts/DavidLibre-Regular.ttf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
